Hero h2 error with a line break on emojies fixed

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -67,7 +67,7 @@ header
     justify-content: space-between
 
 .hero-content-left
-  max-width: 450px
+  max-width: 470px
   display: flex
   flex-direction: column
   gap: 25px
